--- a/frontend/mycareer/src/Components/templateList/TemplateList.scss
+++ b/frontend/mycareer/src/Components/templateList/TemplateList.scss
@@ -73,10 +73,11 @@ body {
         button {
             border: 0;
             background-color: white;
-            width: 60px;
+            width: 50px;
+            margin-top: 5px;
             cursor: pointer;
             img {
-                width: 60px;
+                width: 50px;
             }
         }
     }
