--- a/frontend/mycareer/src/Components/Project/ProjectList.scss
+++ b/frontend/mycareer/src/Components/Project/ProjectList.scss
@@ -25,3 +25,18 @@
     width: 300px;
     height: 200px;
   }
+
+img {
+  width:300px;
+  height: 200px;
+}
+
+ul, li {
+  display: inline;
+}
+
+#addButton {
+  width: 300px;
+  height: 200px;
+  margin-bottom: 30px;
+}
