--- a/frontend/mycareer/src/Components/personalInfo/PersonalInfo.scss
+++ b/frontend/mycareer/src/Components/personalInfo/PersonalInfo.scss
@@ -24,7 +24,7 @@
         }
         .title{
             position: fixed;
-            top: 0;
+            top: 13px;
             margin-left: 80px;
         }
         .save{
