--- a/frontend/mycareer/src/Components/template2/Template2.scss
+++ b/frontend/mycareer/src/Components/template2/Template2.scss
@@ -1,6 +1,7 @@
 #container {
   background-color: #46344e;
   #template2 {
+    z-index: 10;
     #user-profile {
       position: relative;
       background-color: #9d8d8f;
@@ -88,12 +89,98 @@
     }
 
     #portfolio {
-      background-color: rgb(250, 250, 250);
+      background-color: #9d8d8f;
       width: 1000px;
-      height: 800px;
+      height: auto;
       margin: auto;
       margin-top: 20px;
+      padding-bottom: 50px;
       border-radius: 5px;
+      color: #46344e;
+
+      input {
+        border: none;
+        background-color: rgba(250, 250, 250, 0);
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      #portfolio-title {
+        font-size: 40px;
+        width: 100%;
+        padding: 20px 30px;
+        letter-spacing: 3px;
+
+        input {
+          display: inline-block;
+          width: 295px;
+
+          &::placeholder {
+            color: #f7f7f78c;
+          }
+        }
+      }
+
+      .tab-title {
+        border-bottom: 1px solid black;
+        padding: 10px 3px;
+        font-size: 20px;
+        font-weight: bold;
+        letter-spacing: 2px;
+        color: #faed26;
+      }
+
+      .textarea {
+        margin-top: 10px;
+        padding: 5px 10px;
+        font-size: 16px;
+        width: 100%;
+        height: 200px;
+        border: 0px solid;
+        border-radius: 5px;
+        background-color: rgba(255, 255, 255, 0.4);
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      #portfolio-summary {
+        margin: 0 50px;
+
+        #summary-text {
+          margin-top: 10px;
+          padding: 5px 10px;
+          font-size: 16px;
+          width: 100%;
+          height: 200px;
+          border: 0px solid;
+          border-radius: 5px;
+          background-color: rgba(255, 255, 255, 0.4);
+
+          &:focus {
+            outline: none;
+          }
+        }
+      }
+
+      #portfolio-dates {
+        margin: 0 50px;
+      }
+
+      #portfolio-functions {
+        margin: 0 50px;
+      }
+
+      #portfolio-role {
+        margin: 0 50px;
+      }
+
+      #portfolio-results {
+        margin: 0 50px;
+      }
     }
   }
 }
