--- a/frontend/mycareer/src/Components/template3/Template3.scss
+++ b/frontend/mycareer/src/Components/template3/Template3.scss
@@ -1,14 +1,16 @@
-.template3{
+.template3 {
     font-family: "Nanum Gothic Coding", monospace;
     width: 80%;
-    margin: 0px auto;
-    .header{
+    margin: 20px auto;
+    .header {
         width: 100vw;
         height: 60px;
+        background-color: white;
         box-shadow: 0 1px 3px 0.5px rgb(204, 204, 204);
         position: fixed;
         top: 0px;
         left: 0;
+        z-index: 10;
         .back {
             position: fixed;
             button {
@@ -22,16 +24,16 @@
                 }
             }
         }
-        .title{
+        .title {
             position: fixed;
             top: 13px;
             margin-left: 80px;
         }
-        .save{
+        .save {
             position: fixed;
             top: 0;
             right: 15px;
-            button{
+            button {
                 border: 0;
                 border-radius: 5px;
                 background-color: rgb(173, 201, 180);
@@ -47,20 +49,21 @@
         }
     }
 
-    .template-left{
-        margin-top: 70px;
-        width: 55%;
+    .template-left {
+        margin-top: 50px;
+        margin-right: 3%;
+        width: 53%;
         display: inline-block;
         vertical-align: top;
-        
-        input:focus{
+
+        input:focus {
             outline: none;
         }
-        div:focus{
+        div:focus {
             outline: none;
         }
-        
-        .name{
+
+        .name {
             width: 100%;
             height: 50px;
             border: 0;
@@ -68,49 +71,76 @@
             margin: 10px 0;
             padding: 2px 0;
         }
-        .prjDate{
+        .prjDate {
             font-size: 17px;
         }
-        .date{
+        .date {
             margin: 10px 0;
         }
-        .tools{
+        .tools {
             font-size: 17px;
         }
-        .tool{
+        .add-tool {
+            border: solid 1px rgb(209, 209, 209);
+            height: 30px;
+            width: 150px;
+        }
+        .add-btn {
+            border: 0;
+            height: 30.5px;
+            width: 50px;
+            background-color: gray;
+            color: white;
+            // font-size: 15px;
+            margin-right: 5px;
+        }
+        .tool {
             display: inline-block;
             // width: 50px;
-            height: 25px;
-            background-color: rgb(114, 114, 114);
+            height: 30px;
+            background-color: rgb(223, 180, 64);
             color: white;
             border-radius: 5px;
             text-align: center;
             margin: 5px 3px;
-            padding: 1px 8px;
+            padding-top: 3.5px;
+            padding-bottom: 1px;
+            padding-left: 8px;
+            padding-right: 8px;
             vertical-align: middle;
+            .tool-delete {
+                width: 20px;
+                display: inline-block;
+                position: relative;
+                // left: -27px;
+                img {
+                    width: 60%;
+                    margin-left: 8px;
+                    margin-top: 1px;
+                }
+            }
         }
-        .summary{
+        .summary {
             border: 0;
             width: 100%;
             font-size: 20px;
             margin: 10px 0;
             padding: 2px 0;
         }
-        .function{
+        .function {
             border: 0;
             width: 100%;
             font-size: 17px;
             margin: 10px 0;
             padding: 2px 0;
         }
-        .myWork{
+        .myWork {
             width: 100%;
             font-size: 17px;
             margin: 10px 0;
             padding: 2px 0;
-
         }
-        .gitURL{
+        .gitURL {
             border: 0;
             width: 100%;
             height: 20px;
@@ -118,17 +148,57 @@
         }
     }
 
-    .template-right{
-        width: 45%;
-        margin-top: 80px;
+    .template-right {
+        width: 44%;
+        margin-top: 70px;
         display: inline-block;
         // border: solid 1px black;
-
-        .img{
+        .file-upload {
+            label {
+                display: inline-block;
+                padding: 0.5em 0.75em;
+                color: rgb(85, 85, 85);
+                font-size: inherit;
+                line-height: normal;
+                vertical-align: middle;
+                background-color: #fdfdfd;
+                cursor: pointer;
+                border: 1px solid #d4d4d4;
+                border-bottom-color: #e2e2e2;
+                border-radius: 0.25em;
+                margin-bottom: 10px;
+            }
+            input[type="file"] {
+                position: absolute;
+                width: 1px;
+                height: 1px;
+                padding: 0;
+                margin: -1px;
+                overflow: hidden;
+                clip: rect(0, 0, 0, 0);
+                border: 0;
+            }
+        }
+        .preview {
             width: 100%;
             height: 300px;
-            background-color: gray;
-            margin: 15px 0;
+            margin-bottom: 20px;
+            background-color: rgb(228, 228, 228);
+
+            .image-delete {
+                width: 25px;
+                position: relative;
+                top: 35px;
+                left: 10px;
+            }
+            .image-preview {
+                width: 100%;
+                height: 300px;
+                position: relative;
+                top: -27px;
+                overflow: hidden;
+                background-color: gray;
+            }
         }
     }
 }
