--- a/frontend/mycareer/src/Components/portfolio/Portfolio.scss
+++ b/frontend/mycareer/src/Components/portfolio/Portfolio.scss
@@ -26,7 +26,7 @@
         }
         .title {
             position: fixed;
-            top: 0;
+            top: 13px;
             margin-left: 80px;
         }
         .copy {
