--- a/frontend/mycareer/src/Components/template2/Template2.scss
+++ b/frontend/mycareer/src/Components/template2/Template2.scss
@@ -1,6 +1,7 @@
 #container {
   background-color: #46344e;
   padding-bottom: 100px;
+  font-family: "Nanum Gothic", sans-serif;
 
   #template2 {
     #user-profile {
@@ -86,6 +87,14 @@
             width: 300px;
           }
         }
+      }
+
+      &::after {
+        position: absolute;
+        display: block;
+        width: 100px;
+        height: 30px;
+        border: 1px solid white;
       }
     }
 
