--- a/frontend/mycareer/src/Components/template2/Template2.scss
+++ b/frontend/mycareer/src/Components/template2/Template2.scss
@@ -43,12 +43,13 @@
         position: absolute;
         top: 40px;
         font-size: 16px;
+        width: 300px;
         color: #faed26;
 
         input {
           border: none;
           background-color: rgba(0, 0, 0, 0);
-          width: 120px;
+          width: 200px;
           color: white;
 
           &:focus {
@@ -61,6 +62,7 @@
 
           th {
             letter-spacing: 2px;
+            width: 60px;
           }
 
           td {
@@ -76,7 +78,7 @@
       }
 
       #table1 {
-        left: 350px;
+        left: 300px;
       }
 
       #table2 {
@@ -99,12 +101,13 @@
     }
 
     #portfolio {
+      position: relative;
       background-color: #9d8d8f;
       width: 1000px;
       height: auto;
       margin: auto;
       margin-top: 20px;
-      padding-bottom: 30px;
+      padding-bottom: 60px;
       border-radius: 5px;
       color: #46344e;
 
@@ -190,6 +193,25 @@
 
       #portfolio-results {
         margin: 0 50px;
+      }
+
+      #save-btn {
+        position: absolute;
+        width: 120px;
+        height: 36px;
+        background-color: #faed26;
+        border-radius: 5px;
+        text-align: center;
+        line-height: 36px;
+        font-size: 20px;
+        letter-spacing: 5px;
+        font-weight: bold;
+        right: 50px;
+        bottom: 15px;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
   }
